Fixed tab change indicator not showing after AJAX category load (#680)
After switching categories via AJAX, form change event listeners were lost
because varienWindowOnload() was never re-called on the new DOM elements.
Also fixed change indicator icon color on active tabs to be white instead
of green, matching the active tab text color.

--- a/public/skin/adminhtml/default/default/base.css
+++ b/public/skin/adminhtml/default/default/base.css
@@ -799,6 +799,10 @@ ul.tabs a.changed span.changed,ul.tabs-horiz a.changed span.changed {
     color: #090!important
 }
 
+ul.tabs-horiz a.active.changed span.changed {
+    color: #fff!important
+}
+
 ul.tabs a.error span.error,ul.tabs-horiz a.error span.error {
     width: 12px;
     height: 12px;
